# ResearchFlow

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .env.server.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_memory_embeddings.py  0003_report_citations.py
backend/app/: main.py
backend/app/agent/: llm.py  state.py  workflow.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py
backend/app/schemas/: task.py
backend/app/services/: citation_service.py  file_service.py  memory_service.py  rag_service.py  research_intent.py  task_service.py
backend/app/tools/: __init__.py  document_reader.py  reader.py  search.py
backend/researchflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_database.py  smoke_research.py
backend/tests/: test_citation_service.py  test_document_reader.py  test_memory_service.py  test_rag.py  test_reader_tool.py  test_research_intent.py  test_search_tool.py  test_workflow_helpers.py
docs/: architecture.md  deploy-server.md  local-postgres-windows.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
scripts/: local-integration.ps1
